removed geotrack service from API
